# shuttle-agentic-rag

./: Cargo.toml  README.md  Secrets.toml.example
src/: agents.rs  files.rs  main.rs
